Add create new acc

--- a/components/hero.html
+++ b/components/hero.html
@@ -20,7 +20,7 @@
         <a href="#" class="book-now">BOOK NOW</a>
         
         <div class="create-account">
-            <a href="#">Need an Account? Create one!</a>
+            <a href="create_new_account.php">Need an Account? Create one!</a>
         </div>
         
         <h1 class="tagline">Your Best Smiles Starts Here!</h1>
