--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-        
+}       
 body {
     font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px; /* Default font size for the whole page */
 }
+
+
+
 /* Small Footer Logo Styles */
 .small_footer_logo {
     display: flex;
@@ -32,6 +34,15 @@ body {
 .small_footer_logo img:hover {
     opacity: 1;
 }
+.logo-display {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+}
 
-
+.logo-display img {
+    width: 300px;
+    height: auto;
+}
 
