--- a/components/hero.html
+++ b/components/hero.html
@@ -1,27 +1,29 @@
- <!-- Hero Section -->
-    <section class="hero">
-        <!-- Login text (outside blue box) -->
-        <h2 class="login-heading">Login/Hi, Iyah!</h2>
-        
-        <!-- Blue box with appointment only -->  
+<!-- Hero Section -->
+<section class="hero">
+    <!-- Login text (outside blue box) -->
+    <h2 class="login-heading">Login/Hi, Iyah!</h2>
+    
+    <!-- Blue box with appointment - now fully clickable -->  
+    <a href="view_appointment.php" class="appointment-link">
         <div class="appointment-box">
             <div class="appointment-info">
                 <p>Upcoming Appointment:</p>
                 <p>May 31, Saturday</p>
             </div>
         </div>
-        
-        <a href="#" class="log-out-link">Log Out</a>
-        
-        <div class="logo-container">
-            <img src="../static/images/EasySmileLogo.png" alt="Easy Smile Dental and Orthodontics Clinic">
-        </div>
-        
-        <a href="#" class="book-now">BOOK NOW</a>
-        
-        <div class="create-account">
-            <a href="create_new_account.php">Need an Account? Create one!</a>
-        </div>
-        
-        <h1 class="tagline">Your Best Smiles Starts Here!</h1>
-    </section>
+    </a>
+    
+    <a href="#" class="log-out-link">Log Out</a>
+    
+    <div class="logo-container">
+        <img src="../static/images/EasySmileLogo.png" alt="Easy Smile Dental and Orthodontics Clinic">
+    </div>
+    
+    <a href="schedule_appointment.php" class="book-now">BOOK NOW</a>
+    
+    <div class="create-account">
+        <a href="create_new_account.php">Need an Account? Create one!</a>
+    </div>
+    
+    <h1 class="tagline">Your Best Smiles Starts Here!</h1>
+</section>
