--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
 @import url('header.css');
 @import url('services.css');
 @import url('footer.css');
+@import url('register.css');
+@import url('schedule_appointment.css');
+@import url('view_appointment.css');
+
+
 
 * {
     margin: 0;
@@ -13,8 +18,6 @@ body {
     font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px; /* Default font size for the whole page */
 }
-
-
 
 /* Small Footer Logo Styles */
 .small_footer_logo {
