connect the login and registerof the client side to the database

--- a/client/components/dentist.html
+++ b/client/components/dentist.html
@@ -15,7 +15,7 @@
                 </p>
             </div>
             <div class="our-dentist-image-container">
-                <img src="../static/images/dentistpicture.jpg" alt="Dr. Willie Revillame" class="our-dentist-image">
+                <img src="client/static/images/dentistpicture.jpg" alt="Dr. Willie Revillame" class="our-dentist-image">
             </div>
         </div>
     </div>
